--- a/framesjs-starter/package.json
+++ b/framesjs-starter/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@farcaster/core": "^0.14.3",
     "@noble/ed25519": "^2.0.0",
+    "@types/styled-components": "^5.1.34",
     "@vercel/kv": "^1.0.1",
     "@xmtp/frames-validator": "^0.5.0",
     "class-variance-authority": "^0.7.0",
@@ -25,6 +26,7 @@
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8",
     "tailwindcss-animate": "^1.0.7"
   },
   "engines": {
