--- a/framesjs-starter/package.json
+++ b/framesjs-starter/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3"
