--- a/framesjs-starter/package.json
+++ b/framesjs-starter/package.json
@@ -25,6 +25,7 @@
     "frames.js": "^0.9.3",
     "lucide-react": "^0.331.0",
     "next": "^14.1.0",
+    "pinata-fdk": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.8",
